--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "array-shuffle": "^2.0.0",
     "lodash": "^4.17.20",
     "node-mirai-sdk": "^0.2.3",
+    "sleep-promise": "^9.1.0",
     "yaml": "^1.10.0"
   },
   "devDependencies": {},
