重构角色部分代码
暂时未测试这部分代码，准备上单元测试

--- a/config.example.yml
+++ b/config.example.yml
@@ -14,6 +14,11 @@ retry:
   max: 0
 role:
   winCondition: all
+timeLimit:
+  night:
+    werewolf: 300
+    seer: 60
+    witch: 60
 templates:
   - [werewolf, werewolf, villager, villager, witch, seer]
 nicks:
