--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "让你在群里玩狼人杀的 QQ bot。",
   "main": "src/main.js",
   "dependencies": {
+    "colors": "^1.4.0",
     "koishi": "^2.5.0",
     "koishi-adapter-cqhttp": "^1.0.8",
     "koishi-plugin-common": "^3.0.3",
